<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/toast_border"
    android:id="@+id/root_toast_about">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/t_ab1"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="#ffffff"
            android:gravity="start"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/t_ab2"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/t_ab3"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_ab4"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:gravity="start"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/t_ab5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_ab6"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:gravity="start"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:text="@string/t_ab7"
        android:layout_gravity="start"
        android:gravity="start"
        />
    <ImageView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/i4"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:text="@string/t_ab8"
        android:layout_gravity="start"
        android:gravity="start"
       />


</LinearLayout>