<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FFFA"
   >
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eldept"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/b_domestic"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/domestic"
            android:background="@drawable/mybutton"/>
        <Button
            android:id="@+id/b_htc"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/htc"
            android:background="@drawable/mybutton"/>
        <Button
            android:id="@+id/b_ltc"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/ltc"
            android:background="@drawable/mybutton"/>

    </LinearLayout>


</LinearLayout>