<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_dd_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/area_to_dd"
        android:maxLength="50"
        android:layout_gravity="center"
        android:gravity="center"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_marginLeft="2dp"
            android:id="@+id/tv_area_valid_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/area_for"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2">
            <Spinner
                android:id="@+id/sp_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:textColor="#000000"
                android:background="@android:drawable/btn_dropdown"
                android:layout_weight="1"></Spinner>

            <Spinner
                android:id="@+id/sp_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:textColor="#000000"
                android:background="@android:drawable/btn_dropdown"
                android:layout_weight="1"></Spinner>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b_dd_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ob"
            android:layout_weight="1"
            android:gravity="start"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:layout_weight="1"
            android:id="@+id/b_dialog_delete"
            android:gravity="start"/>
        <Button
            android:id="@+id/b_downloadDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/can"
            android:layout_weight="1"
            android:gravity="start"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_download_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ds"/>
</LinearLayout>
