<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_area_code_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/area_to_upld"
        android:maxLength="50"
        android:layout_gravity="center"
        android:gravity="center"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b_area_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ud"
            android:gravity="start"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/b_area_uploadDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/can"
            android:gravity="start"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>