<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FFFA"
    android:paddingTop="100dp"
   >
    <Button
        android:id="@+id/b_read_By_CoonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_by_coonId"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="25sp"

        android:textColor="#000000"
        android:layout_margin="15dp
        "/>
    <Button
        android:id="@+id/b_read_By_Book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/read_by_Book"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="25sp"

        android:textColor="#000000"
        android:layout_margin="15dp"/>
    <Button
        android:id="@+id/b_read_By_CGL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/r_by_cgl"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="25sp"

        android:textColor="#000000"
        android:layout_margin="15dp"/>



</LinearLayout>