<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FFFA"
    >
    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/book_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:id="@+id/et_route_no"

        />
    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dd"
            android:id="@+id/b_download_master_detail"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <Button
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/del"
            android:id="@+id/b_delete_master_detail"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>